--- a/geowave-test/pom.xml
+++ b/geowave-test/pom.xml
@@ -65,6 +65,11 @@
             <artifactId>gt-epsg-hsql</artifactId>
             <version>${geotools.version}</version>
         </dependency>
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>fastjson</artifactId>
+            <version>1.2.54</version>
+        </dependency>
 
     </dependencies>
 
